--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "format": "npx prettier . --write"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "daisyui": "^5.0.35",
     "mongodb": "^6.16.0",
     "next": "15.3.1",
