--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
+    "build:start": "next build && next start",
     "lint": "next lint",
     "format": "npx prettier . --write"
   },
